--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -24,41 +24,54 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.FoodName)
                 </dd>
+
                 <dt class="col-sm-2">
                     Food Description
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.FoodDescription)
                 </dd>
+
                 <dt class="col-sm-2">
                     Category of Food
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
                 </dd>
+
                 <dt class="col-sm-2">
                     Specification
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.Specification)
                 </dd>
+
                 <dt class="col-sm-2">
                     Available?
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.IsAvailable)
                 </dd>
+
                 <dt class="col-sm-2">
                     Price
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.Price)
                 </dd>
+
                 <dt class="col-sm-2">
-                    Image File Path
+                    Image Description
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.ImageDescription)
+                </dd>
+
+                <dt class="col-sm-2">
+                    Image Data
+                </dt>
+                <dd class="col-sm-10">
+                    Image Data Hidden
                 </dd>
             </dl>
 
