--- a/Web App/Pages/MenuModify/Edit.cshtml
+++ b/Web App/Pages/MenuModify/Edit.cshtml
@@ -57,6 +57,12 @@
                         <input asp-for="FoodItem.ImageDescription" class="form-control" />
                         <span asp-validation-for="FoodItem.ImageDescription" class="text-danger"></span>
                     </div>
+                    <div class="form-group">
+                        <label asp-for="FoodItem.ImageData" class="control-label"></label>
+                        <input type="file" id="file1" name="file1" multiple="multiple"/>
+                        <span asp-validation-for="FoodItem.ImageData" class="text-danger"></span>
+                    </div>
+
                     <p>
                         <div class="form-group">
                             <input type="submit" value="Save" class="btn btn-primary" />
