--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -5,9 +5,9 @@
 <html lang="en">
 
 <head>
-@{
-    ViewData["Title"] = "Delete";
-}
+    @{
+        ViewData["Title"] = "Delete";
+    }
 </head>
 
 <body>
@@ -68,10 +68,19 @@
                 </dd>
 
                 <dt class="col-sm-2">
-                    Image Data
+                    Image
                 </dt>
                 <dd class="col-sm-10">
-                    Image Data Hidden
+                    @{
+                    try
+                    {
+                        <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription" >
+                    }
+                    catch
+                    {
+                        <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
+                    } 
+                    }
                 </dd>
             </dl>
 
