--- a/Web App/Pages/MenuModify/Details.cshtml
+++ b/Web App/Pages/MenuModify/Details.cshtml
@@ -69,10 +69,19 @@
                 </dd>
 
                 <dt class="col-sm-2">
-                    Image Data
+                    Image
                 </dt>
                 <dd class="col-sm-10">
-                    Image Data Hidden
+                    @{
+                        try
+                        {
+                            <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription">
+                        }
+                        catch
+                        {
+                            <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
+                        }
+                    }
                 </dd>
             </dl>
         </div>
