--- a/Web App/Pages/MenuModify/Edit.cshtml
+++ b/Web App/Pages/MenuModify/Edit.cshtml
@@ -10,6 +10,7 @@
     }
 </head>
 
+
 <body>
 
     <div class="content-spacing">
@@ -59,7 +60,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="FoodItem.ImageData" class="control-label"></label>
-                        <input type="file" id="file1" name="file1" multiple="multiple"/>
+                        <input type="file" id="file1" name="file1" asp-for="FoodItem.ImageData" class="form-control" />
                         <span asp-validation-for="FoodItem.ImageData" class="text-danger"></span>
                     </div>
 
