--- a/Web App/wwwroot/css/site.css
+++ b/Web App/wwwroot/css/site.css
@@ -103,3 +103,17 @@ body {
     border-radius: 7px;
 }
 
+/* Formatting the menu images display */
+.menu-image-formatting {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+/* Adding spacing for the menu table */
+#menu_table {
+    border-collapse: separate;
+    border-spacing: 15px;
+}
+
+
