--- a/Web App/Pages/MenuModify/Edit.cshtml
+++ b/Web App/Pages/MenuModify/Edit.cshtml
@@ -45,12 +45,12 @@
                         <span asp-validation-for="FoodItem.Specification" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FoodItem.IsAvailable" class="control-label"></label>
+                        <label asp-for="FoodItem.IsAvailable" class="control-label"> In Stock? (TRUE or FALSE)</label>
                         <input asp-for="FoodItem.IsAvailable" class="form-control" />
                         <span asp-validation-for="FoodItem.IsAvailable" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FoodItem.Price" class="control-label"> In Stock? (TRUE or FALSE) </label>
+                        <label asp-for="FoodItem.Price" class="control-label"></label>
                         <input asp-for="FoodItem.Price" class="form-control" />
                         <span asp-validation-for="FoodItem.Price" class="text-danger"></span>
                     </div>
