Login menu link updated

--- a/Web App/wwwroot/css/site.css
+++ b/Web App/wwwroot/css/site.css
@@ -116,4 +116,10 @@ body {
     border-spacing: 15px;
 }
 
+#register {
+    color: white !important;
+}
 
+#login {
+    color: white !important;
+}
