--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-danger" asp-area="" asp-page="/Admin">Admin</a>
                             </li>
+                            <li>
+                                <partial name="_LoginPartial" />
+                            </li>
                         </ul>
                     </div>
                 </div>
