Applying content spacing to shared Layout (all pages)

--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -47,11 +47,14 @@
         </header>
         <!-- Navigation -->
 
-    <div class="container">
+    <!-- Main body-->
+    <div class="container content-spacing">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+    <!-- Main body -->
+
 
         <!-- Footer -->
         <footer class="bg-dark text-center text-white round-corner-top">
