--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -11,41 +11,32 @@
 </head>
 
 <body>
-
-    <div class="content-spacing">
-        <div class="text-center">
-            <h1 class="display-4">Come in & Taste</h1>
-            <img src="@Url.Content("~/img/Gym-Kitchen-Branding-Logo.png")" alt="Gym kitchen logo" class="responsive-picture">
-        </div>
-
-        <div>
-
-            <h2>Crispy Shredded Chicken</h2>
-            <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" class="responsive-picture">
-            <p>
-                Give this popular takeout dish a try with a side of rice or savor it on its own as a part of a buffet-style meal. 
-                Whether you're looking for a main course or a shareable starter, this dish fits the bill perfectly. 
-                It features crispy fried shredded chicken and crisp vegetables coated in a delicate sweet, sour, and savory sauce. 
-                If you prefer a bit of heat, you can opt for some chili oil in the stir-fry sauce, or go for the milder option. 
-                It pairs beautifully with steamed rice, stir-fry noodles, or fried rice. 
-                This recipe closely resembles the well-loved Crispy Shredded Beef dish. 
-                It's designed for those seeking a high-protein, low-calorie option, offering a light and delectable chicken dish that appeals to both adults and kids alike.
-                Learn more about this dish <a href="https://www.bbcgoodfood.com/recipes/crispy-shredded-chicken">here</a>.</p>
-            <p>Image <a href="https://mymorningmocha.com/crispy-chilli-chicken/">reference</a>.</p>
-    
-            <!-- --   TO-DO LIST   -- -->
-            <!-- Fullscreen image on homepage -->
-            <!-- Title and text formatting -->
-            <!-- Grid layout -->
-            <!-- Ask: 
-            - CSS other than site.css  
-            - Layout page use of open library for icons
-            - *** 
-            -->
-
-        </div>
+    <div class="text-center">
+        <h1 class="display-4">Come in & Taste</h1>
+        <img src="@Url.Content("~/img/Gym-Kitchen-Branding-Logo.png")" alt="Gym kitchen logo" class="responsive-picture">
     </div>
 
+    <div>
+
+        <h2>Crispy Shredded Chicken</h2>
+        <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" class="responsive-picture">
+        <p>
+            Give this popular takeout dish a try with a side of rice or savor it on its own as a part of a buffet-style meal. 
+            Whether you're looking for a main course or a shareable starter, this dish fits the bill perfectly. 
+            It features crispy fried shredded chicken and crisp vegetables coated in a delicate sweet, sour, and savory sauce. 
+            If you prefer a bit of heat, you can opt for some chili oil in the stir-fry sauce, or go for the milder option. 
+            It pairs beautifully with steamed rice, stir-fry noodles, or fried rice. 
+            This recipe closely resembles the well-loved Crispy Shredded Beef dish. 
+            It's designed for those seeking a high-protein, low-calorie option, offering a light and delectable chicken dish that appeals to both adults and kids alike.
+            Learn more about this dish <a href="https://www.bbcgoodfood.com/recipes/crispy-shredded-chicken">here</a>.</p>
+        <p>Image <a href="https://mymorningmocha.com/crispy-chilli-chicken/">reference</a>.</p>
+    
+        <!-- --   TO-DO LIST ***  -- -->
+        <!-- Fullscreen image on homepage -->
+        <!-- Title and text formatting -->
+        <!-- Grid layout -->
+        <!-- *** -->
+    </div>
 </body>
 
 </html>
