Admin links visible and accessible by admin only

--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -34,9 +34,17 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/Contact">Contact</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-danger" asp-area="" asp-page="/Admin">Admin</a>
-                            </li>
+
+                            <!-- Code adapted from Microsoft, 2023 -->
+                            @if (SignInManager.IsSignedIn(User)){
+                            <!-- End of adapted code -->
+                                    @if (User.IsInRole("Admin"))
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link text-danger" asp-area="" asp-page="/Admin">Admin</a>
+                                    </li>
+                                }
+                            }
                             <li>
                                 <partial name="_LoginPartial" />
                             </li>
