--- a/Web App/Pages/_ViewImports.cshtml
+++ b/Web App/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Web_App
 @namespace Web_App.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
