Privacy policy created

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -13,7 +13,7 @@
 <body>
     <div class="text-center">
         <h1 class="display-4">Come in & Taste</h1>
-        <img src="@Url.Content("~/img/Gym-Kitchen-Branding-Logo.png")" alt="Gym kitchen logo" class="responsive-picture">
+        <img src="@Url.Content("~/img/Logo-Big.png")" alt="Gym Junkie Cuisine logo" class="responsive-picture">
     </div>
 
     <div>
