Adding HTML Code comments

--- a/Web App/Pages/Admin.cshtml
+++ b/Web App/Pages/Admin.cshtml
@@ -11,9 +11,11 @@
 </head>
 
 <body>
+    <!-- Page title -->
     <h1>@ViewData["Title"]</h1>
     <p>See the admin features below:</p>
 
+    <!-- Displaying available admin options -->
     <h4>Menu Options</h4>
     <ul>
         <li> <a asp-page="/MenuModify/Index">View, Edit & Delete Dishes</a> </li>
