--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -11,8 +11,12 @@
 </head>
 
 <body>
+    <!-- Title of the contact page -->
     <h1>@ViewData["Title"]</h1>
     <p>Contact information here...</p>
+
+    <!-- Form for contacting the website owner via email -->
+
 </body>
 
 </html>
