--- a/Web App/Pages/Error.cshtml
+++ b/Web App/Pages/Error.cshtml
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Error message -->
     <h1 class="text-danger">Error.</h1>
     <h2 class="text-danger">An error occurred while processing your request.</h2>
 
@@ -18,6 +19,7 @@
         <p> <strong>Request ID:</strong> <code>@Model.RequestId</code> </p>
     }
 
+    <!-- More detailed information about the error (Development Mode) -->
     <h3>Development Mode</h3>
     <p> Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred. </p>
     <p> <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
