--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -11,13 +11,14 @@
 </head>
 
 <body>
+    <!-- Welcome message and restaurant logo -->
     <div class="text-center">
-        <h1 class="display-4">Come in & Taste</h1>
+        <h1 class="display-4">Welcome!</h1>
         <img src="@Url.Content("~/img/Logo-Big.png")" alt="Gym Junkie Cuisine logo" class="responsive-picture">
     </div>
 
+    <!-- Dish name and description from the menu -->
     <div>
-
         <h2>Crispy Shredded Chicken</h2>
         <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" class="responsive-picture">
         <p>
@@ -30,12 +31,6 @@
             It's designed for those seeking a high-protein, low-calorie option, offering a light and delectable chicken dish that appeals to both adults and kids alike.
             Learn more about this dish <a href="https://www.bbcgoodfood.com/recipes/crispy-shredded-chicken">here</a>.</p>
         <p>Image <a href="https://mymorningmocha.com/crispy-chilli-chicken/">reference</a>.</p>
-    
-        <!-- --   TO-DO LIST ***  -- -->
-        <!-- Fullscreen image on homepage -->
-        <!-- Title and text formatting -->
-        <!-- Grid layout -->
-        <!-- *** -->
     </div>
 </body>
 
