--- a/Web App/Pages/Menu.cshtml
+++ b/Web App/Pages/Menu.cshtml
@@ -13,6 +13,7 @@
 <body>
     <h1>Menu Information</h1>
 
+    <!-- Menu search bar -->
     <h4>Search</h4>
     <p>
         <form method="post">
@@ -21,8 +22,8 @@
         </form>
     </p>
 
+    <!-- Dispaly all of the menu items -->
     <p>See all of the menu information below:</p>
-
     <div class="text-center">
         <table id="menu_table">
             <thead>
