--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -12,90 +12,90 @@
 
 <body>
 
-    <div class="content-spacing">
+    <!-- Warning for deleting the menu item -->
+    <h1>Are you sure you want to delete this menu item?</h1>
+        
+    <!-- Dispalying all of the data about the menu item -->
+    <div>
+        <dl class="row">
+            <dt class="col-sm-2">
+                Food Name
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.FoodName)
+            </dd>
 
-        <h1>Are you sure you want to delete this menu item?</h1>
-        <div>
-            <hr />
-            <dl class="row">
-                <dt class="col-sm-2">
-                    Food Name
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.FoodName)
-                </dd>
+            <dt class="col-sm-2">
+                Food Description
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.FoodDescription)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Food Description
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.FoodDescription)
-                </dd>
+            <dt class="col-sm-2">
+                Category of Food
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Category of Food
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
-                </dd>
+            <dt class="col-sm-2">
+                Specification
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.Specification)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Specification
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.Specification)
-                </dd>
+            <dt class="col-sm-2">
+                Available?
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.IsAvailable)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Available?
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.IsAvailable)
-                </dd>
+            <dt class="col-sm-2">
+                Price
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.Price)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Price
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.Price)
-                </dd>
+            <dt class="col-sm-2">
+                Image Description
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.ImageDescription)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Image Description
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.ImageDescription)
-                </dd>
+            <dt class="col-sm-2">
+                Image
+            </dt>
+            <dd class="col-sm-10">
+                @{
+                try
+                {
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription" >
+                }
+                catch
+                {
+                    <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
+                } 
+                }
+            </dd>
+        </dl>
 
-                <dt class="col-sm-2">
-                    Image
-                </dt>
-                <dd class="col-sm-10">
-                    @{
-                    try
-                    {
-                        <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription" >
-                    }
-                    catch
-                    {
-                        <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
-                    } 
-                    }
-                </dd>
-            </dl>
+        <!-- Delete button for menu item deletion -->
+        <form method="post">
+            <input type="hidden" asp-for="FoodItem.FoodID" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
 
-            <form method="post">
-                <input type="hidden" asp-for="FoodItem.FoodID" />
-                <input type="submit" value="Delete" class="btn btn-danger" />
-            </form>
-
-            <p>
-                <div>
-                    <a asp-page="./Index">Back to List</a>
-                </div>
-            </p>
-        </div>
-
+        <p>
+            <!-- Option to return to the main menu edit page -->
+            <div>
+                <a asp-page="./Index">Back to List</a>
+            </div>
+        </p>
     </div>
 
 </body>
