--- a/Web App/Pages/MenuModify/Details.cshtml
+++ b/Web App/Pages/MenuModify/Details.cshtml
@@ -12,84 +12,84 @@
 
 <body>
 
-    <div class="content-spacing">
+    <!-- Page title -->
+    <h1>Menu Item Details</h1>
 
-        <h1>Menu Item Details</h1>
+    <!-- Dispalying all of the data about the menu item -->
+    <div>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                Food Name
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.FoodName)
+            </dd>
 
-        <div>
-            <hr />
-            <dl class="row">
-                <dt class="col-sm-2">
-                    Food Name
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.FoodName)
-                </dd>
+            <dt class="col-sm-2">
+                Food Description
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.FoodDescription)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Food Description
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.FoodDescription)
-                </dd>
+            <dt class="col-sm-2">
+                Category of Food
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Category of Food
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
-                </dd>
+            <dt class="col-sm-2">
+                Specificaton
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.Specification)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Specificaton
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.Specification)
-                </dd>
+            <dt class="col-sm-2">
+                Available?
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.IsAvailable)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Available?
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.IsAvailable)
-                </dd>
+            <dt class="col-sm-2">
+                Price
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.Price)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Price
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.Price)
-                </dd>
+            <dt class="col-sm-2">
+                Image Description
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FoodItem.ImageDescription)
+            </dd>
 
-                <dt class="col-sm-2">
-                    Image Description
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.ImageDescription)
-                </dd>
-
-                <dt class="col-sm-2">
-                    Image
-                </dt>
-                <dd class="col-sm-10">
-                    @{
-                        try
-                        {
-                            <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription">
-                        }
-                        catch
-                        {
-                            <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
-                        }
+            <dt class="col-sm-2">
+                Image
+            </dt>
+            <dd class="col-sm-10">
+                @{
+                    try
+                    {
+                        <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription">
                     }
-                </dd>
-            </dl>
-        </div>
-        <div>
-            <a asp-page="./Edit" asp-route-id="@Model.FoodItem?.FoodID">Edit</a> |
-            <a asp-page="./Index">Back to List</a>
-        </div>
-    
+                    catch
+                    {
+                        <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
+                    }
+                }
+            </dd>
+        </dl>
+    </div>
+
+    <!-- Showing options for 'Edit' and 'Back to List' -->
+    <div>
+        <a asp-page="./Edit" asp-route-id="@Model.FoodItem?.FoodID">Edit</a> |
+        <a asp-page="./Index">Back to List</a>
     </div>
 
 </body>
