All menu images implement responsive design

--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -74,7 +74,7 @@
                 @{
                 try
                 {
-                    <img src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription" >
+                    <img class="menu-image-formatting" src="data:image/jpg;base64, @Convert.ToBase64String(Model.FoodItem.ImageData)" alt="@Model.FoodItem.ImageDescription">
                 }
                 catch
                 {
