--- a/Web App/Pages/MenuModify/Index.cshtml
+++ b/Web App/Pages/MenuModify/Index.cshtml
@@ -77,7 +77,16 @@
                     @Html.DisplayFor(modelItem => item.ImageDescription)
                 </td>
                 <td>
-                    Image Data Hidden
+                    @{
+                        try
+                        {
+                            <img src="data:image/jpg;base64, @Convert.ToBase64String(item.ImageData)" alt="@item.ImageDescription" class="image-formatting">
+                        }
+                        catch
+                        {
+                            <img class="img-thumb" src="~/img/no-image.jpg" alt="No image provided" />
+                        }
+                    }
                 </td>
                 <td>
                     <a asp-page="./Edit" asp-route-id="@item.FoodID">Edit</a> |
